# hidemyemail-generator

./: .gitignore  COOKIE_HELP.md  LICENSE  README.md  README.zh-CN.md  cli.py  main.py  pyproject.toml  requirements.txt  start-hidemyemail.bat
.github/workflows/: release.yml
docs/: icloud_cookie.example.txt
icloud/: __init__.py  hidemyemail.py  utils.py
src/hidemyemail_generator/: __init__.py  __main__.py  hidemyemail.py  inbox.py  launcher.py  main.py
tests/: test_cookie_context.py  test_inbox.py
